change label for Monday

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div>
 					<label>
 						<input type = "checkbox" name = "available_field[]" value = "Monday">
-						<label> Monday </label>
+						<p> Monday </p>
 					</label>
 				</div>
 				<div>
