--- a/index.html
+++ b/index.html
@@ -58,44 +58,37 @@
 				<label> Days Available: </label>
 				<div>
 					<label>
-						<input type = "checkbox" name = "available_field[]" value = "Monday">
-						<p> Monday </p>
+						<input type = "checkbox" name = "available_field[]" value = "Monday"> Monday
 					</label>
 				</div>
 				<div>
 					<label>
-						<input type = "checkbox" name = "available_field[]" value = "Tuesday">
-						<label> Tuesday </label>
+						<input type = "checkbox" name = "available_field[]" value = "Tuesday"> Tuesday
 					</label>
 				</div>
 				<div>
 					<label>
-						<input type = "checkbox" name = "available_field[]" value = "Wednesday">
-						<label> Wednesday </label>
+						<input type = "checkbox" name = "available_field[]" value = "Wednesday"> Wednesday
 					</label>
 				</div>
 				<div>
 					<label>
-						<input type = "checkbox" name = "available_field[]" value = "Thursday">
-						<label> Thursday </label>
+						<input type = "checkbox" name = "available_field[]" value = "Thursday"> Thursday
 					</label>
 				</div>
 				<div>
 					<label>
-						<input type = "checkbox" name = "available_field[]" value = "Friday">
-						<label> Friday </label>
+						<input type = "checkbox" name = "available_field[]" value = "Friday"> Friday
 					</label>
 				</div>
 				<div>
 					<label>
-						<input type = "checkbox" name = "available_field[]" value = "Saturday">
-						<label> Saturday </label>
+						<input type = "checkbox" name = "available_field[]" value = "Saturday"> Saturday
 					</label>
 				</div>
 				<div>
 					<label>
-						<input type = "checkbox" name = "available_field[]" value = "Sunday">
-						<label> Sunday </label>
+						<input type = "checkbox" name = "available_field[]" value = "Sunday"> Sunday
 					</label>
 				</div>
 				<div>
@@ -108,7 +101,7 @@
 			<div>
 				<input type = "hidden" name = "hidden_field" value = "aqiao">
 			</div>
-			<input type = "sumbit" value = "Send Me">
+			<input type = "submit" value = "Send Me">
 		</form>
 	</body>
 		
